[tool.poetry]
name = "hp-networking-eos"
version = "0.1.0"
description = ""
authors = ["Sam Morris <sam@robots.org.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
graphviz = "^0.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
